--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,3 +47,12 @@ header p {
   color: #666;
   border-top: 1px solid #333;
 }
+
+.route-loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 40vh;
+  color: #7f8c8d;
+  font-size: 1rem;
+}
