--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -30,6 +30,7 @@
   height: 100%;
   width: auto;
   display: block;
+  filter: drop-shadow(0 0 12px rgba(79, 195, 247, 0.55)) drop-shadow(0 0 4px rgba(79, 195, 247, 0.3));
 }
 
 .navbar-links {
